// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoControls for double digit minutes 1`] = `
<div
  className="absolute bottom0 box itemsCenter left0 paddingX2 paddingY2 right0 xsCol12 xsDisplayFlex"
>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      className="touchable pointer square"
      onClick={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <svg
        aria-hidden={null}
        aria-label="Play"
        className="icon white iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <title>
          Play
        </title>
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="Text fontSize1 white leadingShort alignRight breakWord fontStyleNormal fontWeightNormal"
    >
      15:05
    </div>
  </div>
  <div
    className="box flexGrow paddingX2 paddingY2"
  >
    <div
      className="box flexGrow itemsCenter relative xsDisplayFlex"
      style={
        Object {
          "height": 16,
        }
      }
    >
      <div
        aria-valuemax={905}
        aria-valuemin="0"
        aria-valuenow={905}
        className="playhead"
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        role="progressbar"
        tabIndex="-1"
      >
        <div
          className="absolute box left0 lightGrayBg right0 rounded"
          style={
            Object {
              "height": 4,
            }
          }
        >
          <div
            className="box rounded whiteBg"
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="absolute box rounded"
          style={
            Object {
              "height": 4,
              "left": "100%",
            }
          }
        >
          <div
            className="box circle marginLeftN2 whiteBg"
            style={
              Object {
                "height": 16,
                "marginTop": -6,
                "width": 16,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="Text fontSize1 white leadingShort alignRight breakWord fontStyleNormal fontWeightNormal"
    >
      15:05
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      className="touchable pointer square"
      onClick={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <svg
        aria-hidden={null}
        aria-label="Unmute"
        className="icon white iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <title>
          Unmute
        </title>
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`VideoControls for double digit seconds 1`] = `
<div
  className="absolute bottom0 box itemsCenter left0 paddingX2 paddingY2 right0 xsCol12 xsDisplayFlex"
>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      className="touchable pointer square"
      onClick={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <svg
        aria-hidden={null}
        aria-label="Play"
        className="icon white iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <title>
          Play
        </title>
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="Text fontSize1 white leadingShort alignRight breakWord fontStyleNormal fontWeightNormal"
    >
      00:15
    </div>
  </div>
  <div
    className="box flexGrow paddingX2 paddingY2"
  >
    <div
      className="box flexGrow itemsCenter relative xsDisplayFlex"
      style={
        Object {
          "height": 16,
        }
      }
    >
      <div
        aria-valuemax={15}
        aria-valuemin="0"
        aria-valuenow={15}
        className="playhead"
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        role="progressbar"
        tabIndex="-1"
      >
        <div
          className="absolute box left0 lightGrayBg right0 rounded"
          style={
            Object {
              "height": 4,
            }
          }
        >
          <div
            className="box rounded whiteBg"
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="absolute box rounded"
          style={
            Object {
              "height": 4,
              "left": "100%",
            }
          }
        >
          <div
            className="box circle marginLeftN2 whiteBg"
            style={
              Object {
                "height": 16,
                "marginTop": -6,
                "width": 16,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="Text fontSize1 white leadingShort alignRight breakWord fontStyleNormal fontWeightNormal"
    >
      00:15
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      className="touchable pointer square"
      onClick={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <svg
        aria-hidden={null}
        aria-label="Unmute"
        className="icon white iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <title>
          Unmute
        </title>
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`VideoControls for single digit minutes 1`] = `
<div
  className="absolute bottom0 box itemsCenter left0 paddingX2 paddingY2 right0 xsCol12 xsDisplayFlex"
>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      className="touchable pointer square"
      onClick={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <svg
        aria-hidden={null}
        aria-label="Play"
        className="icon white iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <title>
          Play
        </title>
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="Text fontSize1 white leadingShort alignRight breakWord fontStyleNormal fontWeightNormal"
    >
      01:05
    </div>
  </div>
  <div
    className="box flexGrow paddingX2 paddingY2"
  >
    <div
      className="box flexGrow itemsCenter relative xsDisplayFlex"
      style={
        Object {
          "height": 16,
        }
      }
    >
      <div
        aria-valuemax={65}
        aria-valuemin="0"
        aria-valuenow={65}
        className="playhead"
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        role="progressbar"
        tabIndex="-1"
      >
        <div
          className="absolute box left0 lightGrayBg right0 rounded"
          style={
            Object {
              "height": 4,
            }
          }
        >
          <div
            className="box rounded whiteBg"
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="absolute box rounded"
          style={
            Object {
              "height": 4,
              "left": "100%",
            }
          }
        >
          <div
            className="box circle marginLeftN2 whiteBg"
            style={
              Object {
                "height": 16,
                "marginTop": -6,
                "width": 16,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="Text fontSize1 white leadingShort alignRight breakWord fontStyleNormal fontWeightNormal"
    >
      01:05
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      className="touchable pointer square"
      onClick={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <svg
        aria-hidden={null}
        aria-label="Unmute"
        className="icon white iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <title>
          Unmute
        </title>
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`VideoControls for single digit seconds 1`] = `
<div
  className="absolute bottom0 box itemsCenter left0 paddingX2 paddingY2 right0 xsCol12 xsDisplayFlex"
>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      className="touchable pointer square"
      onClick={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <svg
        aria-hidden={null}
        aria-label="Play"
        className="icon white iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <title>
          Play
        </title>
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="Text fontSize1 white leadingShort alignRight breakWord fontStyleNormal fontWeightNormal"
    >
      00:05
    </div>
  </div>
  <div
    className="box flexGrow paddingX2 paddingY2"
  >
    <div
      className="box flexGrow itemsCenter relative xsDisplayFlex"
      style={
        Object {
          "height": 16,
        }
      }
    >
      <div
        aria-valuemax={5}
        aria-valuemin="0"
        aria-valuenow={5}
        className="playhead"
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        role="progressbar"
        tabIndex="-1"
      >
        <div
          className="absolute box left0 lightGrayBg right0 rounded"
          style={
            Object {
              "height": 4,
            }
          }
        >
          <div
            className="box rounded whiteBg"
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="absolute box rounded"
          style={
            Object {
              "height": 4,
              "left": "100%",
            }
          }
        >
          <div
            className="box circle marginLeftN2 whiteBg"
            style={
              Object {
                "height": 16,
                "marginTop": -6,
                "width": 16,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="Text fontSize1 white leadingShort alignRight breakWord fontStyleNormal fontWeightNormal"
    >
      00:05
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      className="touchable pointer square"
      onClick={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <svg
        aria-hidden={null}
        aria-label="Unmute"
        className="icon white iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <title>
          Unmute
        </title>
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`VideoControls rounds for partial seconds 1`] = `
<div
  className="absolute bottom0 box itemsCenter left0 paddingX2 paddingY2 right0 xsCol12 xsDisplayFlex"
>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      className="touchable pointer square"
      onClick={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <svg
        aria-hidden={null}
        aria-label="Play"
        className="icon white iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <title>
          Play
        </title>
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="Text fontSize1 white leadingShort alignRight breakWord fontStyleNormal fontWeightNormal"
    >
      01:07
    </div>
  </div>
  <div
    className="box flexGrow paddingX2 paddingY2"
  >
    <div
      className="box flexGrow itemsCenter relative xsDisplayFlex"
      style={
        Object {
          "height": 16,
        }
      }
    >
      <div
        aria-valuemax={67.3}
        aria-valuemin="0"
        aria-valuenow={67.3}
        className="playhead"
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        role="progressbar"
        tabIndex="-1"
      >
        <div
          className="absolute box left0 lightGrayBg right0 rounded"
          style={
            Object {
              "height": 4,
            }
          }
        >
          <div
            className="box rounded whiteBg"
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="absolute box rounded"
          style={
            Object {
              "height": 4,
              "left": "100%",
            }
          }
        >
          <div
            className="box circle marginLeftN2 whiteBg"
            style={
              Object {
                "height": 16,
                "marginTop": -6,
                "width": 16,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="Text fontSize1 white leadingShort alignRight breakWord fontStyleNormal fontWeightNormal"
    >
      01:07
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      className="touchable pointer square"
      onClick={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <svg
        aria-hidden={null}
        aria-label="Unmute"
        className="icon white iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <title>
          Unmute
        </title>
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
</div>
`;
